# LifeBook

./: .gitignore  ARCHITECTURE.md  CODING_GUIDELINES.md  FRAGMENT_MASKING_RESULTS.md  GRAPHQL_GUIDE.md  Makefile.toml  QUICKSTART.md  README.md  SPIKE_RESULTS.md  biome.jsonc  codegen.yml  components.json  package.json  pnpm-lock.yaml  react-router.config.ts  schema.graphql  tsconfig.json  vite.config.ts
.github/workflows/: DESIGN.md  ci.yml  frontend.yml  rust.yml
.husky/: pre-commit  pre-merge-commit  pre-push
doc/architecture/: ARCHITECTURE.md
doc/development/: AI_WORKFLOW.md  GRAPHQL_GUIDE.md  VERSIONING.md
doc/plan/: 2025-10-23-organize-documentation-structure.plan.md  2025-10-26-graphql-codegen-setup.plan.md  2025-10-26-graphql-schema-export.plan.md  2025-10-26-prevent-main-branch-commits.plan.md  2025-11-01-settings-modal.plan.md  2025-11-01-theme-sync.plan.md  README.md
scripts/: sync-version.js
src/: App.css  root.tsx  routes.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/contexts/settings/: Cargo.toml
src-tauri/contexts/settings/src/: application.rs  domain.rs  infrastructure.rs  lib.rs  presentation.rs
src-tauri/contexts/settings/src/application/: dto.rs  errors.rs  services.rs
src-tauri/contexts/settings/src/application/dto/: appearance.rs  database.rs  general.rs  settings.rs
src-tauri/contexts/settings/src/application/services/: settings_service.rs
src-tauri/contexts/settings/src/domain/: entities.rs  errors.rs  repositories.rs  value_objects.rs
src-tauri/contexts/settings/src/domain/entities/: app.rs  appearance.rs  database.rs  general.rs  settings.rs
src-tauri/contexts/settings/src/domain/repositories/: settings.rs
src-tauri/contexts/settings/src/domain/value_objects/: language.rs  theme.rs
src-tauri/contexts/settings/src/infrastructure/: file_storage.rs  repositories.rs
src-tauri/contexts/settings/src/infrastructure/repositories/: settings.rs
src-tauri/contexts/settings/src/presentation/: graphql.rs  integration.rs
src-tauri/contexts/settings/src/presentation/graphql/: error_ext.rs  mutations.rs  queries.rs
src-tauri/contexts/settings/src/presentation/graphql/mutations/: settings.rs
src-tauri/contexts/settings/src/presentation/graphql/queries/: settings.rs
src-tauri/contexts/shared/: Cargo.toml
src-tauri/contexts/shared/src/: error_test.rs  lib.rs
src-tauri/contexts/shared/src/application/: errors.rs
src-tauri/contexts/shared/src/domain/: errors.rs
src-tauri/entity/: Cargo.toml
src-tauri/entity/src/: book.rs  lib.rs
src-tauri/lifebook/: Cargo.toml  tauri.conf.json
src-tauri/lifebook/src/: app_state.rs  database.rs  graphql_schema.rs  infrastructure.rs  lib.rs  presentation.rs
src-tauri/lifebook/src/infrastructure/: models.rs
src-tauri/lifebook/src/presentation/: schema.rs
src-tauri/migration/: Cargo.toml  README.md
src-tauri/migration/src/: lib.rs  m20250108_000001_create_book_table.rs  main.rs
src-tauri/src/: app_state.rs  database.rs  entities.rs  lib.rs  main.rs  migration.rs  modules.rs
src-tauri/src/application/: dto.rs  errors.rs  services.rs
src-tauri/src/domain/: entities.rs  errors.rs  repositories.rs
src-tauri/src/graphql/: mod.rs  resolvers.rs  schema.rs
src-tauri/src/infrastructure/: mod.rs  models.rs  repositories.rs
src-tauri/src/infrastructure/models/: book.rs  mod.rs
src-tauri/src/infrastructure/repositories/: book.rs  mod.rs
src-tauri/src/modules/: mod.rs
src-tauri/src/modules/shared/: application.rs  mod.rs
src-tauri/src/modules/shared/application/: errors.rs  mod.rs
src-tauri/src/modules/shared/domain/: errors.rs  mod.rs
src-tauri/src/presentation/: mod.rs  mutation.rs  query.rs  schema.rs
src/app/routes/: dashboard.tsx
src/components/: app-sidebar.tsx  chart-area-interactive.tsx  data-table.tsx  nav-documents.tsx  nav-main.tsx  nav-secondary.tsx  nav-user.tsx  section-cards.tsx  site-header.tsx  version-switcher.tsx
src/components/common/: app-header.tsx  app-sidebar.tsx  search-form.tsx
src/components/ui/: alert.tsx  avatar.tsx  badge.tsx  breadcrumb.tsx  button.tsx  card.tsx  chart.tsx  checkbox.tsx  dialog.tsx  drawer.tsx  dropdown-menu.tsx  input.tsx  label.tsx  select.tsx  separator.tsx  sheet.tsx  sidebar.tsx  site-header.tsx  tabs.tsx  textarea.tsx  toggle-group.tsx  toggle.tsx  tooltip.tsx
src/features/books/: fragment-masking-test.ts  fragment-test.tsx  fragments.generated.ts  mutations.generated.ts  mutations.graphql  page.tsx  queries.generated.ts  queries.graphql
src/features/books/__tests__/: components.test.tsx  fragment-masking.test.ts
src/features/books/create/: page.tsx
src/features/books/create/api/: createBook.ts  mutations.generated.ts  mutations.graphql
src/features/books/delete/: page.tsx
src/features/books/delete/api/: checkBookExists.ts  deleteBook.ts  mutations.generated.ts  mutations.graphql  queries.generated.ts  queries.graphql
src/features/books/detail/: page.tsx
src/features/books/detail/api/: getBook.ts  queries.generated.ts  queries.graphql
src/features/books/graphql/fragments/: BookCard.tsx  BookDetail.tsx  fragments.generated.ts  (+1 more)
src/features/books/list/: BookCard.tsx  BookList.tsx  page.tsx
src/features/books/shared/: types.ts
src/features/books/update/: page.tsx
src/features/dashboard/: page.tsx
src/features/settings/: mutations.generated.ts  mutations.graphql  page.tsx  queries.generated.ts  queries.graphql  settings-modal.tsx  types.ts
src/features/settings/appearance/: page.tsx
src/features/settings/components/: appearance-settings-form.tsx  database-settings-form.tsx  general-settings-form.tsx  settings-sidebar.tsx
src/features/settings/database/: page.tsx
src/features/settings/general/: page.tsx
src/features/settings/hooks/: use-settings.ts
src/graphql/mutations/: library.graphql  settings.graphql
src/graphql/queries/: library.graphql  settings.graphql
src/layouts/: app-layout.tsx
src/lib/: apollo-client.ts  error-test.ts  graphql.ts  test-helper.ts
src/routes/: _app.tsx  _layout.tsx  books.tsx  dashboard.tsx  home.tsx
src/welcome/: welcome.tsx
(+35 files in other folders)
