[workspace]
members = [
  "lifebook",
  "migration",
  "entity",
  "contexts/library",
  "contexts/settings",
  "contexts/shared",
]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
# Async & Concurrency
async-graphql = "7.0.17"
async-trait = "0.1.89"
tokio = "1.48.0"

# Database
sea-orm = "1.1.17"
sea-orm-migration = "1.1.17"

# Serialization
serde = "1.0.228"
serde_json = "1.0.145"
strum = "0.26.3"

# Error Handling
anyhow = "1.0.100"
thiserror = "2.0.17"

# Time
chrono = "0.4.42"

# Tauri
tauri = "2.8.5"
tauri-build = "2.4.1"
tauri-plugin-opener = "2.5.0"

# Testing
tempfile = "3.23.0"
