[workspace]
members = [
  "lifebook",
  "migration",
  "entity",
  "contexts/library",
  "contexts/settings",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.lints.clippy]
# Pedantic lints that are practical and catch common bugs
match_wildcard_for_single_variants = "warn"
cast_possible_truncation = "warn"
cast_precision_loss = "warn"
trivially_copy_pass_by_ref = "warn"
unnecessary_wraps = "warn"

[workspace.dependencies]
# Async & Concurrency
async-graphql = "7.0.17"
async-trait = "0.1.89"
tokio = "1.48.0"

# Database
sea-orm = "1.1.17"
sea-orm-migration = "1.1.17"

# Serialization
serde = "1.0.228"
serde_json = "1.0.145"
strum = "0.27.2"

# Error Handling
anyhow = "1.0.100"
thiserror = "2.0.17"

# Time
chrono = "0.4.42"

# Tauri
tauri = "2.9.1"
tauri-build = "2.5.1"
tauri-plugin-opener = "2.5.0"

# Testing
tempfile = "3.23.0"
