[package]
name = "lifebook"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lifebook_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
tauri = { workspace = true, features = [] }
tauri-plugin-opener = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
sea-orm = { workspace = true, features = [
  "sqlx-sqlite",
  "runtime-tokio-rustls",
  "macros",
] }
sea-orm-migration = { workspace = true, features = [
  "sqlx-sqlite",
  "runtime-tokio-rustls",
] }
async-graphql = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
migration = { path = "../migration" }
entity = { path = "../entity" }
library = { path = "../contexts/library" }
settings = { path = "../contexts/settings" }
shared = { path = "../contexts/shared" }
