[package]
name = "migration"
version = "0.1.0"
edition.workspace = true
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-trait = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
sea-orm-migration = { workspace = true, features = [
  "sqlx-sqlite",
  "runtime-tokio-rustls",
] }
