[package]
name = "settings"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "settings"
path = "src/lib.rs"

[dependencies]
shared = { path = "../shared" }
async-graphql = "7"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "io-util", "sync"] }
anyhow = "1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt"] }

