[package]
name = "settings"
version = "0.1.0"
edition.workspace = true
publish = false

[lib]
name = "settings"
path = "src/lib.rs"

[dependencies]
shared = { path = "../shared" }
async-graphql = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "sync"] }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
