[package]
name = "settings"
version.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[lib]
name = "settings"
path = "src/lib.rs"

[dependencies]
async-graphql = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "sync"] }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "time"] }
